--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,14 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.person {
+  background-color: darkseagreen;
+  border: 3px, solid bisque;
+  border-radius: 10px;
 }
